--- a/Module 7 - Classes and Objects II.ipynb
+++ b/Module 7 - Classes and Objects II.ipynb
@@ -525,14 +525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cuboid with width=3, length=3, and height=3\n"
+      "Cube with side=3\n"
      ]
     }
    ],
@@ -541,7 +541,7 @@
     "    def __init__(self,side):\n",
     "        Cuboid.__init__(self,side,side,side)\n",
     "        \n",
-    "    def __str(self):\n",
+    "    def __str__(self):\n",
     "        return 'Cube with side={}'.format(self.width)\n",
     "                                        \n",
     "cube=Cube(3)\n",
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "False"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "True"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "['Hi', 'Hello', 'Apple']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
        "['Hi', 'Hello', 'Apple']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "['A', 'C']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "['A', 'C']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
        "{'a', 'b', 'c'}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +961,7 @@
        "True"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
