--- a/Module 9 - Aggregation.ipynb
+++ b/Module 9 - Aggregation.ipynb
@@ -3464,12 +3464,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number</th>\n",
+       "      <th>orbital_period</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>method</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Radial Velocity</th>\n",
+       "      <td>553</td>\n",
+       "      <td>553</td>\n",
+       "      <td>510</td>\n",
+       "      <td>530</td>\n",
+       "      <td>553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Transit</th>\n",
+       "      <td>397</td>\n",
+       "      <td>397</td>\n",
+       "      <td>1</td>\n",
+       "      <td>224</td>\n",
+       "      <td>397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Imaging</th>\n",
+       "      <td>38</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Microlensing</th>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Eclipse Timing Variations</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pulsar Timing</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Transit Timing Variations</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Orbital Brightness Modulation</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Astrometry</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pulsation Timing Variations</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               number  orbital_period  mass  distance  year\n",
+       "method                                                                     \n",
+       "Radial Velocity                   553             553   510       530   553\n",
+       "Transit                           397             397     1       224   397\n",
+       "Imaging                            38              12     0        32    38\n",
+       "Microlensing                       23               7     0        10    23\n",
+       "Eclipse Timing Variations           9               9     2         4     9\n",
+       "Pulsar Timing                       5               5     0         1     5\n",
+       "Transit Timing Variations           4               3     0         3     4\n",
+       "Orbital Brightness Modulation       3               3     0         2     3\n",
+       "Astrometry                          2               2     0         2     2\n",
+       "Pulsation Timing Variations         1               1     0         0     1"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countPlanet=planets.groupby(['method']).count()\n",
-    "countPlanet.sort"
+    "countPlanet.sort_values('number',ascending=False)"
    ]
   },
   {
