--- a/Module 9 - Combining Datasets.ipynb
+++ b/Module 9 - Combining Datasets.ipynb
@@ -1197,7 +1197,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ft/nr64ylkn0lqb43gh8m5vvy3h0000gn/T/ipykernel_76859/76017350.py:5: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/ft/nr64ylkn0lqb43gh8m5vvy3h0000gn/T/ipykernel_96955/76017350.py:5: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  states1.append(states2)\n"
      ]
     },
@@ -3290,7 +3290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3506,7 +3506,7 @@
        "4          IL    Illinois    12882135  149995"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3554,7 +3554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3694,7 +3694,7 @@
        "0  Mary  bread  wine"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3720,7 +3720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3765,7 +3765,7 @@
        "0  Mary  bread  wine"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3784,7 +3784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3945,7 +3945,7 @@
        "3  Joseph    NaN  beer"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3964,7 +3964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4118,7 +4118,7 @@
        "2   Mary  bread  wine"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4154,7 +4154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4333,7 +4333,7 @@
        "3   Sue       4       2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4356,7 +4356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4535,13 +4535,22 @@
        "3   Sue       4       2"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "display('df8', 'df9', 'pd.merge(df8, df9, on=\"name\", suffixes=[\"_L\", \"_R\"])')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df8.to_csv('rr.csv', index=False, header=True)"
    ]
   },
   {
@@ -4572,7 +4581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -4581,13 +4590,13 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 57935  100 57935    0     0  95756      0 --:--:-- --:--:-- --:--:-- 95760\n",
+      "100 57935  100 57935    0     0   136k      0 --:--:-- --:--:-- --:--:--  136k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   835  100   835    0     0   3068      0 --:--:-- --:--:-- --:--:--  3081\n",
+      "100   835  100   835    0     0   2459      0 --:--:-- --:--:-- --:--:--  2463\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   872  100   872    0     0   2726      0 --:--:-- --:--:-- --:--:--  2725\n"
+      "100   872  100   872    0     0   3598      0 --:--:-- --:--:-- --:--:--  3603\n"
      ]
     }
    ],
@@ -4607,7 +4616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -4811,7 +4820,7 @@
        "4  California           CA"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4838,14 +4847,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ft/nr64ylkn0lqb43gh8m5vvy3h0000gn/T/ipykernel_76859/3459192081.py:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "/var/folders/ft/nr64ylkn0lqb43gh8m5vvy3h0000gn/T/ipykernel_96955/3459192081.py:3: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  merged = merged.drop('abbreviation', 1) # drop duplicate info\n"
      ]
     },
@@ -4931,7 +4940,7 @@
        "4           AL  under18  2011   1125763.0  Alabama"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4952,7 +4961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4966,7 +4975,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4984,7 +4993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -5069,13 +5078,53 @@
        "2452           PR    total  1993         NaN   NaN"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merged[merged['population'].isnull()].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['PR'], dtype=object)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged[merged['population'].isnull()]['state/region'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1990, 1991, 1993, 1992, 1994, 1995, 1996, 1998, 1997, 1999])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged[merged['population'].isnull()]['year'].unique()"
    ]
   },
   {
@@ -5090,7 +5139,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state/region</th>\n",
+       "      <th>ages</th>\n",
+       "      <th>year</th>\n",
+       "      <th>population</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2496</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>under18</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>64218512.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2497</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>total</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>249622814.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2498</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>total</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>252980942.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2499</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>under18</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>65313018.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2500</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>under18</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>66509177.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     state/region     ages  year   population state\n",
+       "2496          USA  under18  1990   64218512.0   NaN\n",
+       "2497          USA    total  1990  249622814.0   NaN\n",
+       "2498          USA    total  1991  252980942.0   NaN\n",
+       "2499          USA  under18  1991   65313018.0   NaN\n",
+       "2500          USA  under18  1992   66509177.0   NaN"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged.loc[merged['state/region']=='USA'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -5099,7 +5244,7 @@
        "array(['PR', 'USA'], dtype=object)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5118,7 +5263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -5132,7 +5277,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5155,7 +5300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -5246,7 +5391,7 @@
        "4           AL  under18  2011   1125763.0  Alabama        52423.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5265,7 +5410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -5280,7 +5425,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5298,7 +5443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -5307,7 +5452,7 @@
        "array(['United States'], dtype=object)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5326,7 +5471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -5417,7 +5562,7 @@
        "4           AL  under18  2011   1125763.0  Alabama        52423.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5437,7 +5582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -5528,7 +5673,7 @@
        "197           CA  total  2010  37333601.0  California       163707.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5548,12 +5693,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state/region</th>\n",
+       "      <th>ages</th>\n",
+       "      <th>year</th>\n",
+       "      <th>population</th>\n",
+       "      <th>area (sq. mi)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alabama</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>total</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>4785570.0</td>\n",
+       "      <td>52423.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alaska</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>total</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>713868.0</td>\n",
+       "      <td>656425.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arizona</th>\n",
+       "      <td>AZ</td>\n",
+       "      <td>total</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>6408790.0</td>\n",
+       "      <td>114006.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Arkansas</th>\n",
+       "      <td>AR</td>\n",
+       "      <td>total</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2922280.0</td>\n",
+       "      <td>53182.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>California</th>\n",
+       "      <td>CA</td>\n",
+       "      <td>total</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>37333601.0</td>\n",
+       "      <td>163707.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           state/region   ages  year  population  area (sq. mi)\n",
+       "state                                                          \n",
+       "Alabama              AL  total  2010   4785570.0        52423.0\n",
+       "Alaska               AK  total  2010    713868.0       656425.0\n",
+       "Arizona              AZ  total  2010   6408790.0       114006.0\n",
+       "Arkansas             AR  total  2010   2922280.0        53182.0\n",
+       "California           CA  total  2010  37333601.0       163707.0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data2010.set_index('state', inplace=True)\n",
-    "density = data2010['population'] / data2010['area (sq. mi)']"
+    "data2010.head()"
    ]
   },
   {
