--- a/Module 9 - Combining Datasets.ipynb
+++ b/Module 9 - Combining Datasets.ipynb
@@ -5799,7 +5799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -5814,12 +5814,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "density = data2010['population'] / data2010['area (sq. mi)']\n",
     "density.sort_values(ascending=False, inplace=True)\n",
     "density.head()"
    ]
@@ -5836,7 +5837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -5851,7 +5852,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5869,6 +5870,27 @@
     "This type of messy data merging is a common task when trying to answer questions using real-world data sources.\n",
     "I hope that this example has given you an idea of the ways you can combine tools we've covered in order to gain insight from your data!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
